--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,27 +7,17 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Contact Us</h1>
-        <form action="/submit" method="POST" enctype="multipart/form-data">
-            <div>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <div>
-                <label for="file">Upload File:</label>
-                <input type="file" id="file" name="file">
-            </div>
-            <button type="submit">Submit</button>
-        </form>
-    </div>
+    <h1>Contact Us</h1>
+    <form action="/submit" method="POST" enctype="multipart/form-data">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea><br>
+        <label for="attachment">Attachment:</label>
+        <input type="file" id="attachment" name="attachment"><br>
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
